--- a/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcLinkTpl.html
@@ -19,7 +19,7 @@
                         <li>
                             <label>Link形态</label>
                             <div>
-                                <select ng-model="lcLinkData.form[0].kind" ng-options="value.id as value.label for value in kind">
+                                <select ng-model="lcLinkData.form[0].form" ng-options="value.id as value.label for value in form">
                                     <option value="">请选形态种别</option>
                                 </select>
                             </div>
