收费站渲染，新建，编辑，新增（删除）名称信息，新增（删除）通道信息

--- a/scripts/components/road/tpls/attr_tollgate_tpl/tollGateNameTpl.html
+++ b/scripts/components/road/tpls/attr_tollgate_tpl/tollGateNameTpl.html
@@ -20,13 +20,13 @@
                     <li>
                         <label>名称内容</label>
                         <div>
-                            <input type="text" class="fm-control" ng-model="tollGateName.name"/>
+                            <input type="text" class="fm-control" ng-model="tollGateName.name" ng-blur="namePronunciation(tollGateName.name);"/>
                         </div>
                     </li>
                     <li>
                         <label>名称发音</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="tollGateName.phonetic"/>
+                            <input type="text" class="fm-control" ng-model="tollGateName.phonetic"/>
                         </div>
                     </li>
                 </ul>
