--- a/scripts/components/road/tpls/attr_rdcrf_tpl/crfRoadTpl.html
+++ b/scripts/components/road/tpls/attr_rdcrf_tpl/crfRoadTpl.html
@@ -1,72 +1,23 @@
-<div class="fm-component" ng-controller="rdSlopeCtl">
+<div class="fm-component" ng-controller="crfRoadCtrl">
     <div class="title">
-        坡度PID
-        <span class="label label-info">{{slopeData.pid}}</span>
+        CRF道路PID
+        <span class="label label-info">{{crfRoadData.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
-        <from name="rdSlopeForm">
-            <div class="fm-panel" >
+        <from name="crfInterForm">
+            <div class="fm-panel">
+                <div class="title">
+                    <div>组成Link（共 <span ng-bind="crfRoadData.links.length">0</span> 条）</div>
+                </div>
                 <div class="content">
-                    <ul class="fm-ul fm-ul-form">
+                    <ul class="fm-ul fm-ul-form" ng-repeat="cItem in crfRoadData.links">
                         <li>
-                            <label>关联点</label>
+                            <label>Link{{$index+1}}号码</label>
                             <div>
-                                <input type="text" class="fm-control" ng-model="slopeData.nodePid" disabled />
-                            </div>
-                        </li>
-                        <li>
-                            <label>退出线</label>
-                            <div>
-                                <input type="text" class="fm-control" ng-model="slopeData.linkPid" disabled />
-                            </div>
-                        </li>
-                        <li>
-                            <label>坡度类型</label>
-                            <div>
-                                <label>
-                                    <input type="radio" value=1 ng-model="slopeData.type">
-                                    水平
-                                </label>
-                                <label>
-                                    <input type="radio" value=2 ng-model="slopeData.type">
-                                    上坡
-                                </label>
-                                <label>
-                                    <input type="radio" value=3 ng-model="slopeData.type">
-                                    下坡
-                                </label>
-                            </div>
-                        </li>
-                        <li>
-                            <label>坡度角度</label>
-                            <div>
-                                <input type="text" class="fm-control" ng-model="slopeData.angle" />
+                                <input type="text" class="fm-control" ng-model="cItem.linkPid" disabled/>
                             </div>
                         </li>
                     </ul>
-                </div>
-            </div>
-            <div class="fm-panel" >
-                <div class="title">
-                    <div>连续Link（共 <span ng-bind="slopeData.slopeVias.length">0</span> 条）</div>
-                </div>
-                <div class="content">
-                    <div ng-repeat="cItem in slopeData.slopeVias" class="blackTheme module-box">
-                        <ul class="fm-ul fm-ul-form">
-                            <li >
-                                <label>Link序号</label>
-                                <div>
-                                    <input type="text" class="fm-control" ng-model="cItem.seqNum" disabled/>
-                                </div>
-                            </li>
-                            <li >
-                                <label>Link号码</label>
-                                <div>
-                                    <input type="text" class="fm-control" ng-model="cItem.linkPid" disabled/>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </from>
