--- a/scripts/components/road/tpls/attr_lc_tpl/lcNodeTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcNodeTpl.html
@@ -4,7 +4,7 @@
         <span class="label label-info" >{{lcNodeData.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
-        <from name="zoneNodeForm">
+        <from name="lcNodeForm">
             <div class="fm-panel" >
                 <div class="content">
 					<ul class="fm-ul fm-ul-form">
