收费站保存

--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -499,7 +499,7 @@
                         <!--end 挂接-->
                         <!--begin 辅路-->
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('dis')">
-                            <label class="col-sm-5 control-label" style="padding: 4px">辅&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;路:</label>
+                            <label class="col-sm-5 control-label" style="padding: 4px">距主路距离:</label>
                             <div class="col-sm-7" style="padding: 4px">
                                 <span class="label ">{{dataTipsData.dis}} 米</span>
                             </div>
