修改点限速和rtic

--- a/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
+++ b/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
@@ -50,8 +50,7 @@
                             <label>作用方向</label>
                             <div>
                                 <select ng-model="speedLimitData.direct"
-                                        ng-options="value.id as value.label for value in speedDirectTypeOptions"
-                                        ng-change="changeDirect(speedLimitData.direct)">
+                                        ng-options="value.id as value.label for value in speedDirectTypeOptions" disabled>
                                 </select>
                             </div>
 
