--- a/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/rticTpl.html
@@ -4,6 +4,7 @@
         <li class="list-group-item">
             <div class="list-name">
                 <a ng-click="addIntRtic()" style="cursor: pointer;color:#FFF;">互联网RTIC信息（共<span ng-if="rticData!=undefined">{{rticData.intRtics.length}}</span>条）</a>
+                <span title="显示场景" class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,2)" ng-mouseleave="backColor($index,2)" ng-click="showScene(1)"></span>
             </div>
             <div class="list-line"></div>
         </li>
@@ -16,19 +17,24 @@
         </li>
     </ul>
 
-    <ul class="list-group list-group-lg m-b-none" >
-        <li class="list-group-item">
-            <div class="list-name">
+    <div class="fm-panel" >
+        <div class="title">
+            <div>
                 <a ng-click="addCarRtic()" style="cursor: pointer;color:#FFF;">车厂RTIC信息（共<span ng-if="linkData!=undefined">{{linkData.rtics.length}}</span>条）</a>
+                <span title="显示场景" class="glyphicon glyphicon-remove-sign" style="padding-top:0px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,2)" ng-mouseleave="backColor($index,2)" ng-click="showScene(2)"></span>
             </div>
-            <div class="list-line"></div>
-        </li>
-        <li class="list-group-item" ng-repeat="cItem in linkData.rtics  track by $index">
-            <div ng-click="showCarInfo(cItem)" style="cursor: pointer;">
-                <label style="padding-top: 5px;cursor: pointer;" class="control-label" ng-if="cItem.updownFlag == 0">上行 &nbsp;{{cItem.code}}</label>
-                <label style="padding-top: 5px;cursor: pointer;" class="control-label" ng-if="cItem.updownFlag == 1">下行 &nbsp;{{cItem.code}}</label>
-                <span id="carSpan{{$index}}" class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,2)" ng-mouseleave="backColor($index,2)" ng-click="minusCarRtic($index)"></span>
-            </div>
-        </li>
-    </ul>
+        </div>
+        <div class="content">
+            <ul class="fm-ul fm-ul-form">
+                <li ng-repeat="cItem in linkData.rtics  track by $index">
+                    <div ng-click="showCarInfo(cItem)" style="cursor: pointer;">
+                        <label style="padding-top: 5px;cursor: pointer;" class="control-label" ng-if="cItem.updownFlag == 0">上行 &nbsp;{{cItem.code}}</label>
+                        <label style="padding-top: 5px;cursor: pointer;" class="control-label" ng-if="cItem.updownFlag == 1">下行 &nbsp;{{cItem.code}}</label>
+                        <span id="carSpan{{$index}}" class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: right;cursor:pointer;" ng-mouseover="changeColor($index,2)" ng-mouseleave="backColor($index,2)" ng-click="minusCarRtic($index)"></span>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </div>
