--- a/less/editor.less
+++ b/less/editor.less
@@ -1727,6 +1727,18 @@ form input[type=checkbox].ng-dirty:before {
   color:#EEE8CD;
 }
 
+.topDelete{
+  float: right;
+  font-size: 12px;
+  top: 5px;
+  margin-top: -10px;
+  color: #fff;
+  cursor: pointer;
+}
+.imageActive{
+  background: black;
+}
+
 .fm-ul-container{
   margin: 10px;
   border: 1px solid #fff;
