执行检查弹窗

--- a/scripts/components/poi/tpls/edit-tools/optionBarTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/optionBarTpl.html
@@ -53,6 +53,10 @@
                 </button>
             </div>
         </div>
+        <button ng-show="tagSelect == 'errorCheck'" class="btn btn-xs fm-output-btn pull-right" ng-click="startCheckEvent();" style="margin-right: 10px;">
+            <i class="glyphicon glyphicon-hourglass"></i>
+            执行检查
+        </button>
     </div>
     <div class="fm-console-content dark scroll-styled">
         <div ng-include="tagContentTpl"></div>
