--- a/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
+++ b/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
@@ -10,20 +10,20 @@
                     <li>
                         <label class="control-label">进入线</label>
                         <div>
-                            <input type="text" ng-model="variableSpeed.linkPid" disabled="disabled" />
+                            <input type="text" ng-model="variableSpeed.inLinkPid" disabled="disabled" />
                         </div>
                     </li>
                     <li>
                         <label class="control-label">退出线</label>
                         <div>
-                            <input type="text" ng-model="variableSpeed.linkPid" disabled="disabled" />
+                            <input type="text" ng-model="variableSpeed.outLinkPid" disabled="disabled" />
                         </div>
                     </li>
                     <li>
                         <label class="control-label">标牌位置</label>
                         <div>
                             <label for="left">
-                                <input id="left" type="checkbox" ng-checked="variableSpeed.locationLeft == 1" ng-click="changeLocationLeft();">
+                                <input id="left" type="checkbox" ng-checked="variableSpeed.locationLeft == 0" ng-click="changeLocationLeft();">
                                 左
                             </label>
                             <label for="right">
@@ -31,7 +31,7 @@
                                 右
                             </label>
                             <label for="top">
-                                <input id="top" type="checkbox" ng-checked="variableSpeed.locationTop == 1" ng-click="changeLocationTop();">
+                                <input id="top" type="checkbox" ng-checked="variableSpeed.locationTop == 2" ng-click="changeLocationTop();">
                                 上
                             </label>
                         </div>
@@ -39,7 +39,7 @@
                     <li>
                         <label class="control-label">限速值</label>
                         <div>
-                            <input type="text" ng-model="variableSpeed.speedLimit"/>
+                            <input type="text" ng-model="variableSpeed.speedValue"/>
                         </div>
                     </li>
                     <li>
@@ -51,23 +51,11 @@
         <div class="fm-panel">
             <div class="content">
                 <div class="box-head font-bold">
-                    名称信息（共<span ng-bind="lcFaceData.names.length"></span> 条）
+                    名称信息（共<span ng-bind="variableSpeed.vias.length"></span> 条）
                 </div>
                 <ul class="fm-ul fm-ul-form">
-                    <li>
+                    <li ng-if="variableSpeed.vias" ng-repeat="item in variableSpeed.vias">
                         <label class="control-label">道路线1</label>
-                        <div>
-                            <input type="text" ng-model="variableSpeed.linkPid" disabled="disabled" />
-                        </div>
-                    </li>
-                    <li>
-                        <label class="control-label">道路线2</label>
-                        <div>
-                            <input type="text" ng-model="variableSpeed.linkPid" disabled="disabled" />
-                        </div>
-                    </li>
-                    <li>
-                        <label class="control-label">道路线3</label>
                         <div>
                             <input type="text" ng-model="variableSpeed.linkPid" disabled="disabled" />
                         </div>
