--- a/scripts/components/road/tpls/attr_voiceGuide_tpl/voiceGuide.html
+++ b/scripts/components/road/tpls/attr_voiceGuide_tpl/voiceGuide.html
@@ -18,58 +18,62 @@
                     <li>
                         <label>进入线</label>
                         <div >
-                            <input fm-edit-view type="text" readonly class="fm-control" ng-model="voiceGuide.inLinkPid"/>
+                            <input type="text" readonly class="fm-control" ng-model="voiceGuide.inLinkPid"/>
                         </div>
                     </li>
                     <li>
                         <label>Node号码</label>
                         <div>
-                            <input fm-edit-view type="text" readonly class="fm-control" ng-model="voiceGuide.nodePid"/>
+                            <input type="text" readonly class="fm-control" ng-model="voiceGuide.nodePid"/>
                         </div>
                     </li>
                     <li>
                         <label>退出线</label>
                         <div>
-                            <input fm-edit-view type="text" readonly class="fm-control" ng-model="voiceGuide.details[selectIndex].outLinkPid"/>
+                            <input type="text" readonly class="fm-control" ng-model="voiceGuide.details[selectIndex].outLinkPid"/>
                         </div>
                     </li>
                     <li>
                         <label>语音类型</label>
                         <div>
-                            <select fm-edit-view class="fm-control" ng-model="voiceGuide.details[selectIndex].guideType" ng-options="value.id as value.label for value in guideTypeList"></select>
+                            <select class="fm-control" ng-model="voiceGuide.details[selectIndex].guideType" ng-options="value.id as value.label for value in guideTypeList"></select>
                         </div>
                     </li>
                     <li>
                         <label>语音代码</label>
                         <div>
-                            <select fm-edit-view class="fm-control" ng-model="voiceGuide.details[selectIndex].guideCode" ng-options="value.id as value.label for value in guideCodeList"></select>
+                            <select class="fm-control" ng-model="voiceGuide.details[selectIndex].guideCode" ng-options="value.id as value.label for value in guideCodeList"></select>
                         </div>
                     </li>
                     <li>
                         <label>处理标志</label>
-                        <label ng-repeat="(key, value) in progressFlag">
-                            <input fm-edit-view type="radio" value="{{key}}" ng-model="voiceGuide.details[selectIndex].processFlag"> {{value}}
-                        </label>
+                        <div>
+                            <label ng-repeat="(key, value) in progressFlag">
+                                <input type="radio" value="{{key}}" ng-model="voiceGuide.details[selectIndex].processFlag"> {{value}}
+                            </label>
+                        </div>
                     </li>
                     <li>
                         <label>关系类型</label>
-                        <label ng-repeat="(key, value) in relationshipType">
-                            <input fm-edit-view type="radio"  value="{{key}}" ng-model="voiceGuide.details[selectIndex].relationshipType"> {{value}}
-                        </label>
+                        <div>
+                            <label ng-repeat="(key, value) in relationshipType">
+                                <input type="radio"  value="{{key}}" ng-model="voiceGuide.details[selectIndex].relationshipType"> {{value}}
+                            </label>
+                        </div>
                     </li>
                 </ul>
             </form>
         </div>
         <div class="fm-panel">
             <div class="title">
-                经过线（共{{details.vias ? details.vias.length : 0}}条）
+                经过线（共{{voiceGuide.details[selectIndex].vias ? voiceGuide.details[selectIndex].vias.length : 0}}条）
             </div>
             <div class="content">
                 <ul class="fm-ul fm-ul-form">
-                    <li ng-repeat="via in details.vias">
+                    <li ng-repeat="via in voiceGuide.details[selectIndex].vias">
                         <label>道路线{{$index+1}}</label>
                         <div>
-                            <input type="text" readonly class="fm-control" ng-model="via.outPutLinkPid"/>
+                            <input type="text" readonly class="fm-control" ng-model="via.linkPid"/>
                         </div>
                     </li>
                 </ul>
