--- a/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
+++ b/scripts/components/poi/tpls/attr-base/baseInfoTpl.html
@@ -2,7 +2,7 @@
     <div ng-show="propertyType=='base'">
         <div class="fm-panel">
             <div class="content" style="padding-bottom: 18px;">
-
+                <form form-disabled>
                     <ul class="fm-ul fm-ul-form">
                         <li>
                             <label>名 称</label>
@@ -25,7 +25,7 @@
                         </li>
                         <li>
                             <label>种 别</label>
-                            <div>
+                            <div class="select2-option">
                                 <select fm-edit-view class="fm-control" ng-model="selectedKind"
                                         no_results_text="'没有找到'"  placeholder_text_single="'--请选择--'" search_contains=true
                                         ng-options="value as lable.kindName for (value, lable) in metaData.kindFormat"
@@ -47,7 +47,7 @@
                             <label>等 级</label>
                             <div>
                                 <label ng-repeat="lev in levelArr">
-                                    <input fm-edit-view type="radio"  ng-model="poi.level" value="{{lev}}"> {{lev}}
+                                    <input fm-edit-view type="radio" class="lv-radio" ng-model="poi.level" value="{{lev}}"> {{lev}}
                                 </label>
                             </div>
                         </li>
@@ -88,22 +88,29 @@
             </div>
         </div>
         <div class="fm-panel">
-            <div class="title"><a href="javascript:void(0);" title="点击添加电话" ng-click="addContact()">联系电话 &nbsp;&nbsp;<i class="glyphicon glyphicon-plus-sign"></i></a>
+            <div class="title">
+                <a ng-if="!isSpecialOperation" href="javascript:void(0);" title="点击添加电话" ng-click="addContact()">联系电话 &nbsp;&nbsp;
+                    <i ng-if="!isSpecialOperation" class="glyphicon glyphicon-plus-sign"></i>
+                </a>
+                <a ng-if="isSpecialOperation" href="javascript:void(0);" title="点击添加电话">联系电话 &nbsp;&nbsp;
+                </a>
                 <span style="float:right;">共 <span ng-bind="poi.contacts.length"></span> 条</span>
             </div>
             <div class="content" style="max-height: 300px;">
-                <ul class="fm-ul fm-ul-list">
-                    <li ng-repeat="item in poi.contacts">
-                        <div>
-                            <input type='text' class="fm-control tel-code" ng-class="{'tel-empty':controlFlag.isTelEmptyArr[$index] }" maxlength="5" ng-model="item.code" ng-show="item.contactType==1">
-                            <span ng-show="item.contactType==1"> - </span>
-                            <input type='text' ng-class="{'fm-control': true, 'tel-number': true, 'tel-cellphone': item.contactType == 2,'tel-empty':controlFlag.isTelEmptyArr[$index] }" maxlength="11" ng-blur="checkTelNo($index,$event)" ng-model="item.contact">
-                        </div>
-                        <div>
-                            <a href="javascript:void(0);" ng-click="deleteContact($index);"><i class="glyphicon glyphicon-remove-sign"></i></a>
-                        </div>
-                    </li>
-                </ul>
+                <form form-disabled>
+                    <ul class="fm-ul fm-ul-list">
+                        <li ng-repeat="item in poi.contacts">
+                            <div>
+                                <input type='text' class="fm-control tel-code" ng-class="{'tel-empty':controlFlag.isTelEmptyArr[$index] }" maxlength="5" ng-model="item.code" ng-show="item.contactType==1">
+                                <span ng-show="item.contactType==1"> - </span>
+                                <input type='text' ng-class="{'fm-control': true, 'tel-number': true, 'tel-cellphone': item.contactType == 2,'tel-empty':controlFlag.isTelEmptyArr[$index] }" maxlength="11" ng-blur="checkTelNo($index,$event)" ng-model="item.contact">
+                            </div>
+                            <div>
+                                <a href="javascript:void(0);" ng-click="deleteContact($index);"><i class="glyphicon glyphicon-remove-sign"></i></a>
+                            </div>
+                        </li>
+                    </ul>
+                </form>
             </div>
         </div>
     </div>
