--- a/scripts/components/poi/tpls/attr-deep/parkingTpl.html
+++ b/scripts/components/poi/tpls/attr-deep/parkingTpl.html
@@ -10,10 +10,10 @@
                     <li>
                         <label>收费标准</label>
                         <div class="block">
-                            <label ng-repeat="(key, value) in tollStd" ng-if="key != 5">
+                            <label ng-repeat="(key, value) in tollStd" ng-if="key != 5" class="col-md-5">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="poi.parkings[0].tollStd[key]" ng-click="tollStdChange($event)"> {{value}}
                             </label>
-                            <label ng-repeat="(key, value) in tollStd" ng-if="key == 5" class="fm-specialopt">
+                            <label ng-repeat="(key, value) in tollStd" ng-if="key == 5" class="fm-specialopt col-md-5">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="poi.parkings[0].tollStd[key]" ng-click="tollStdChange($event)"> {{value}}
                             </label>
                         </div>
@@ -21,7 +21,7 @@
                     <li>
                         <label>收费方式</label>
                         <div class="block">
-                            <label ng-repeat="(key, value) in tollWay">
+                            <label ng-repeat="(key, value) in tollWay" class="col-md-5">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="poi.parkings[0].tollWay[key]"> {{value}}
                             </label>
                         </div>
@@ -29,19 +29,19 @@
                     <li>
                         <label>支付方式</label>
                         <div class="block">
-                            <label ng-repeat="(key, value) in paymentObj">
+                            <label ng-repeat="(key, value) in paymentObj" ng-class="{false:'col-md-5',true:'col-md-6'}[value=='MasterCard']">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="poi.parkings[0].payment[key]">
                                 {{value}}
                             </label>
                         </div>
                     </li>
                     <li>
-                        <label>收费备注</label>
+                        <label>收费备注（大陆）</label>
                         <div class="block">
-                            <label ng-repeat="(key, value) in remark" ng-if="key == 0" class="fm-specialopt">
+                            <label ng-repeat="(key, value) in remark" ng-if="key == 0" class="fm-specialopt col-md-5">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="poi.parkings[0].remark[key]" ng-click="remarkChange($event)"> {{value}}
                             </label>
-                            <label ng-repeat="(key, value) in remark" ng-if="key != 0">
+                            <label ng-repeat="(key, value) in remark" ng-if="key != 0" class="col-md-5">
                                 <input fm-edit-view type="checkbox" value="{{key}}" ng-model="poi.parkings[0].remark[key]" ng-click="remarkChange($event)"> {{value}}
                             </label>
                         </div>
