语音引导，  大门删除、修改接口联调，时间段选择报错  同一线保存，删除

--- a/scripts/components/road/tpls/attr_same_tpl/rdSameLinkTpl.html
+++ b/scripts/components/road/tpls/attr_same_tpl/rdSameLinkTpl.html
@@ -10,7 +10,7 @@
                     <li style="padding:5px">
                         <label>Link{{$index+1}}号码</label>
                         <div >
-                            <input type="text" readonly class="fm-control" value="{{link.nodePid}}"/>
+                            <input type="text" readonly class="fm-control" value="{{link.linkPid}}"/>
                         </div>
                     </li>
                     <li style="padding:5px">
