--- a/scripts/components/road/tpls/specialwork/searchSubModalTpl.htm
+++ b/scripts/components/road/tpls/specialwork/searchSubModalTpl.htm
@@ -6,34 +6,38 @@
                 <li>
                     <label>名称:</label>
                     <div>
-                        <input fm-edit-view type="text" class="fm-control" style="width:200px;" ng-model="poi.address.fullname"/>
+                        <input type="text" class="fm-control" style="width:200px;" ng-model="param.name"/>
                     </div>
                 </li>
                 <li>
                     <label>道路名组ID:</label>
                     <nobr>
-                    	<input fm-edit-view type="text" class="fm-control" style="width:200px;" ng-model="poi.postCode"/>
-                    	<a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -30px;" ng-click="openSearchModal()"></a>
+                    	<input type="text" class="fm-control" style="width:200px;" ng-model="param.nameGroupid"/>
+                    	<a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -30px;" ng-click="openSubSearchModal('nameGroup')"></a>
                     </nobr>
                 </li>
                 <li>
                     <label>行政区划:</label>
                     <nobr>
-                    	<input fm-edit-view type="text" class="fm-control" style="width:200px;" ng-model="poi.postCode"/>
-                    	<a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -30px;" ng-click="openSearchModal()"></a>
+                    	<input type="text" class="fm-control" style="width:200px;" ng-model="param.admin"/>
+                    	<a href="#" title="搜索" class="btn glyphicon glyphicon-search" style="margin-left: -30px;" ng-click="openSubSearchModal('admin')"></a>
                     </nobr>
                 </li>
                 <li>
                     <label>自定义SQL语句:</label>
                     <div>
-                        <textarea fm-edit-view type="text" class="fm-control" ng-model="poi.postCode" style="width:400px;height:50px;"></textarea>
+                        <textarea  type="text" class="fm-control" ng-model="param.sql" style="width:400px;height:50px;"></textarea>
                     </div>
                 </li>
             </ul>
         </div>
         <div style="border-bottom: 1px solid #ddd;"></div>
         <div style="text-align:right;">
-            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doChoice()">查询</button>
+            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doSearch()">查询</button>
         </div>
+        <div ng-show="subSearchModal!=false" class="div-float" style="top:60px;left:150px;width:600px;border-radius:5px;z-index:1000">
+	       <button type="button" class="close" style="padding:0px 4px;" ng-click="closeSubSearchModal()"><span>&times;</span></button>
+	       <div ng-include="subSearchModalTpl"></div>
+	   </div>
     </div>
 </div>
