--- a/scripts/components/road/tpls/attr_lc_tpl/lcFaceTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcFaceTpl.html
@@ -1,6 +1,6 @@
 <div class="fm-component" ng-controller="lcFaceCtrl">
     <div class="title">
-        土地利用面
+        土地覆盖面
         <span class="label label-info">{{lcFaceData.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
