--- a/scripts/components/road/tpls/attr_lu_tpl/luLinkTpl.html
+++ b/scripts/components/road/tpls/attr_lu_tpl/luLinkTpl.html
@@ -11,7 +11,7 @@
                         <li>
                             <label>种别</label>
                             <div>
-                                <select ng-model="luLinkData.kinds[0].kind"
+                                <select ng-model="luLinkData.linkKinds[0].kind"
                                         ng-options="value.id as value.label for value in kind">
                                 </select>
                             </div>
