可变限速完善

--- a/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
+++ b/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
@@ -39,7 +39,7 @@
                     <li>
                         <label class="control-label">限速值</label>
                         <div>
-                            <input type="text" ng-model="variableSpeed.speedValue"/>
+                            <input style="width: 120px;" type="text" ng-model="variableSpeed.speedValue"/> Km/小时
                         </div>
                     </li>
                     <li>
