重构点的增加

--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -79,7 +79,7 @@
         <ul class="dropdown-menu shape-well" role="menu">
             <li class="btn-group btn-group-sm" style="margin: 0px 2px;">
                 <button type="button" class="btn btx-xs btn-feat" ng-class="{'IXPOI':'active'}[featureOperator]" ng-controller="addPoiCtrl" ng-click="addPoi('IXPOI')">兴趣点</button>
-                <button type="button" class="btn btx-xs btn-feat" ng-class="{'ADADMIN':'active'}[featureOperator]" ng-controller="addNodeFeatureCtrl" ng-click="addShape('ADADMIN')">行政区划代表点</button>
+                <button type="button" class="btn btx-xs btn-feat" ng-class="{'ADADMIN':'active'}[featureOperator]" ng-controller="addShapeCtrl" ng-click="addShape('ADADMIN')">行政区划代表点</button>
             </li>
         </ul>
     </div>
