--- a/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
+++ b/scripts/components/road/tpls/specialwork/roadNameEditPanelTpl.htm
@@ -108,7 +108,7 @@
                 </li>
                 <li>
                     <label >路线号码??</label>
-                    <div><input type="text" class="fm-control" ng-model=""/></div>
+                    <div><input type="text" class="fm-control" /></div>
                 </li>
             </ul>
             <ul class="fm-ul fm-ul-form col-md-4">
@@ -180,7 +180,7 @@
         </div>
         <div style="border-bottom: 1px solid #ddd;"></div>
         <div style="text-align:right;">
-            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="">保存</button>
+            <button type="button" class="btn btn-main" ng-disabled="running" ng-click="doSave()">保存</button>
         </div>
     </div>
     <div ng-show="searchModal!=false" class="div-float" style="top:60px;left:150px;width:600px;border-radius:5px;z-index:1000">
