新增线的时候可以选择是否捕捉点、线

--- a/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
+++ b/scripts/components/tools/tpls/toolbar-map/addShapeTpl.htm
@@ -15,6 +15,12 @@
     <div class="btn-group">
         <button type="button" class="btn btn-xs btn-shape dropdown-toggle" ng-class="{'addLink':'active'}[shapeOperator]" data-toggle="dropdown">线 <span class="caret"></span></button>
         <ul class="dropdown-menu shape-well" role="menu">
+            <label style="padding:0px;color:white;font-size: 10px;font-weight:normal">
+                <input class="date-body" type="checkbox" ng-model="nodeChecked" ng-checked="nodeChecked" > 捕捉Node
+            </label>
+            <label style="padding:0px;color:white;font-size: 9px;font-weight:normal">
+                <input class="date-body" type="checkbox" ng-model="linkChecked" ng-checked="linkChecked" > 捕捉Link
+            </label>
             <li class="btn-group btn-group-xs">
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RDLINK':'active'}[featureOperator]" ng-controller="addLinkFeatureCtrl" ng-click="addLink('RDLINK')">道路Link</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'RWLINK':'active'}[featureOperator]" ng-controller="addLinkFeatureCtrl" ng-click="addLink('RWLINK')">铁路Link</button>
@@ -23,6 +29,12 @@
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'LULINK':'active'}[featureOperator]" ng-controller="addLinkFeatureCtrl" ng-click="addLink('LULINK')">LuLink</button>
                 <button type="button" class="btn btn-xs btn-feat" ng-class="{'LCLINK':'active'}[featureOperator]" ng-controller="addLinkFeatureCtrl" ng-click="addLink('LCLINK')">LcLink</button>
             </li>
+
+            <!--<li>-->
+
+                <!--<input class="date-body" type="checkbox" ng-checked="nodeChecked" >捕捉Node-->
+                <!--<input class="date-body" type="checkbox" ng-checked="linkChecked" >捕捉Link-->
+            <!--</li>-->
         </ul>
     </div>
     <div class="btn-group">
