--- a/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
+++ b/scripts/components/road/tpls/attr_variableSpeed_tpl/variableSpeed.html
@@ -4,50 +4,52 @@
         <span class="label label-info">{{variableSpeed.pid}}</span>
     </div>
     <div class="content scroll-styled dark" style="height:90%;">
-        <div class="fm-panel">
-            <div class="content">
-                <ul class="fm-ul fm-ul-form">
-                    <li>
-                        <label style="letter-spacing: 1px" class="control-label">进 入 线</label>
-                        <div>
-                            <input type="text" ng-model="variableSpeed.inLinkPid" disabled="disabled" />
-                        </div>
-                    </li>
-                    <li>
-                        <label style="letter-spacing: 1px" class="control-label">退 出 线</label>
-                        <div>
-                            <input type="text" ng-model="variableSpeed.outLinkPid" disabled="disabled" />
-                        </div>
-                    </li>
-                    <li>
-                        <label class="control-label">标牌位置</label>
-                        <div>
-                            <label for="left">
-                                <input id="left" type="checkbox" ng-checked="variableSpeed.locationLeft">
-                                左
-                            </label>
-                            <label for="right">
-                                <input id="right" type="checkbox" ng-checked="variableSpeed.locationRight">
-                                右
-                            </label>
-                            <label for="top">
-                                <input id="top" type="checkbox" ng-checked="variableSpeed.locationTop">
-                                上
-                            </label>
-                        </div>
-                    </li>
-                    <li>
-                        <label style="letter-spacing: 1px" class="control-label">限 速 值</label>
-                        <div>
-                            <input style="width: 120px;" type="text" ng-model="variableSpeed.speedValue"/> Km/小时
-                        </div>
-                    </li>
-                    <li>
-                        <div ng-include="carPopoverURL" data-type="1" style="width:100%;padding: 5px 15px 5px 0;"></div>
-                    </li>
-                </ul>
+        <form name="variableSpeedForm">
+            <div class="fm-panel">
+                <div class="content">
+                    <ul class="fm-ul fm-ul-form">
+                        <li>
+                            <label style="letter-spacing: 1px" class="control-label">进 入 线</label>
+                            <div>
+                                <input type="text" ng-model="variableSpeed.inLinkPid" disabled="disabled" />
+                            </div>
+                        </li>
+                        <li>
+                            <label style="letter-spacing: 1px" class="control-label">退 出 线</label>
+                            <div>
+                                <input type="text" ng-model="variableSpeed.outLinkPid" disabled="disabled" />
+                            </div>
+                        </li>
+                        <li>
+                            <label class="control-label">标牌位置</label>
+                            <div>
+                                <label for="left">
+                                    <input class="control-label" id="left" type="checkbox" ng-model="variableSpeed.locationLeft">
+                                    左
+                                </label>
+                                <label for="right">
+                                    <input class="control-label" id="right" type="checkbox" ng-model="variableSpeed.locationRight">
+                                    右
+                                </label>
+                                <label for="top">
+                                    <input class="control-label" id="top" type="checkbox" ng-model="variableSpeed.locationTop">
+                                    上
+                                </label>
+                            </div>
+                        </li>
+                        <li>
+                            <label style="letter-spacing: 1px" class="control-label">限 速 值</label>
+                            <div>
+                                <input style="width: 120px;" type="text" ng-model="variableSpeed.speedValue"/> Km/小时
+                            </div>
+                        </li>
+                        <li>
+                            <div ng-include="carPopoverURL" data-type="1" style="width:100%;padding: 5px 15px 5px 0;"></div>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
+        </form>
         <div class="fm-panel">
             <div class="content">
                 <div class="box-head font-bold">
