--- a/less/editor.less
+++ b/less/editor.less
@@ -1837,3 +1837,7 @@ form input[type=checkbox].ng-dirty:before {
 .date-body {
   color: #FFF;
 }
+
+.tr-backcolor{
+  background-color: rgba(85, 85, 85, 0.5);
+}
